objects/Contact.object
<CustomObject>
    <fields>
        <fullName>CAP__c</fullName>
        <label>CAP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citt__c</fullName>
        <label>Città</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Civico__c</fullName>
        <label>Civico</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ente__c</fullName>
        <label>Ente</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirizzo__c</fullName>
        <label>Indirizzo</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nota__c</fullName>
        <label>Nota</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PO_Change_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Classi_di_funzionalit_a_cui_accedere__c</fullName>
        <label>Classi di funzionalità a cui accedere</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PO_Contatto_telefonico__c</fullName>
        <label>Contatto telefonico</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PO_Fiber_Lease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fiber Lease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Fiber_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fiber Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_IRU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IRU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Misto_Fiber_Lease_Link_per_Fastweb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evento Temporaneo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_N_Licenza__c</fullName>
        <label>N° Licenza</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PO_P2P_Attiva__c</fullName>
        <defaultValue>false</defaultValue>
        <label>P2P Attiva</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_P2P_Base__c</fullName>
        <defaultValue>false</defaultValue>
        <label>P2P Base</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Servizi_a_fattibilit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Servizi a fattibilità</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Servizio_BTS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Servizio BTS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Servizio_Backhauling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Servizio Backhauling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Servizio_Circuiti_Diretti__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Circuiti Diretti</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Servizio_DarkFiber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Servizio DarkFiber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Servizio_GPON_Passiva_CeD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Servizio GPON Passiva C&amp;D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Servizio_Incident_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Servizio Incident Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Servizio_KIT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Servizio Preprovisioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Servizio_Open_Stream_CeD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Servizio Open Stream C&amp;D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Servizio_Open_Stream__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Servizio Open Stream</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Servizio_Ticket_Provisioning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Servizio Ticket Provisioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Servizio_Trouble_Ticket__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Servizio Trouble Ticket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Struttura_di_appartenenza__c</fullName>
        <label>Struttura di appartenenza</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Super_User__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Spuntando questo campo l&apos;utente di Partner Community sarà abilitato alla Gestione Utenze in quanto considerato Super-User</inlineHelpText>
        <label>Super-User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P_IVA_Codice_Fiscale__c</fullName>
        <label>P.IVA/Codice Fiscale</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Availability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CR34 Improvement Extension II requirement</description>
        <label>Product Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ragione_Sociale__c</fullName>
        <label>Ragione Sociale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segnalazione_Provisioning_SOC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Segnalazione Provisioning SOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Telefono__c</fullName>
        <label>Telefono</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>n_Dipendenti__c</fullName>
        <label>n° Dipendenti</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.ALLOW_PORTAL_SELF_REG</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>PO_Partner</fullName>
        <active>true</active>
        <description>RT previsto per il salvataggio dei Partner Community users</description>
        <label>PO Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Referente_Tecnico_OLO</fullName>
        <active>true</active>
        <label>Referente Tecnico OLO</label>
    </recordTypes>
    <recordTypes>
        <fullName>SN_Social_Contact</fullName>
        <active>true</active>
        <label>SN Social Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>